--- a/src/app/components/series/series.component.scss
+++ b/src/app/components/series/series.component.scss
@@ -17,6 +17,16 @@
     position: absolute;
     top: 100px;
     left: 60px;
+    &.fundoSerie {
+        background-color: #141414;
+        z-index: 1;
+        position:fixed;
+        // top:0;
+        top: -68px;
+    position: fixed;
+    background: rgb(20, 20, 20);
+        
+    }
 }
 
 span {
