--- a/src/app/components/series/series.component.scss
+++ b/src/app/components/series/series.component.scss
@@ -1,3 +1,9 @@
+.container-series {
+    // overflow-x: hidden;
+    background-color: #141414;
+}
+
+
 #tooltip {
     opacity: 0; //esconder o elemento
     visibility: hidden;
@@ -234,4 +240,31 @@ span {
     position: relative;
     width: 650px;
     top: 6rem;
+}
+
+div .img-carousel {
+    border-radius: 10px !important;
+    width: 300px !important;
+    height: 200px !important;
+    // margin-top: 20px !important;
+    // width: 100%;
+    // height: 100%;
+    /* position: relative; */
+    /* object-fit: contain;*/
+}
+
+.carousel {
+    left: 60px !important;
+    background-color: #141414 !important;
+}
+
+.names-list {
+    font-size: 1.4vw;
+    color: #e5e5e5;
+    font-weight: 700;
+    margin: 0 4% .5em 4%;
+    text-decoration: none;
+    display: inline-block;
+    min-width: 6em;
+    background-color: #141414;
 }
