Inclusão dos cards maiores na tela de series

--- a/src/app/components/series/series.component.html
+++ b/src/app/components/series/series.component.html
@@ -34,31 +34,31 @@
                     <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme1">
                 </div>
                 <div class="carousel-cell">
-                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme2">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme2">
                 </div>
                 <div class="carousel-cell">
                     <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme3">
                 </div>
                 <div class="carousel-cell">
-                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme4">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme4">
                 </div>
                 <div class="carousel-cell">
                     <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme5">
                 </div>
                 <div class="carousel-cell">
-                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme6">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme6">
                 </div>
                 <div class="carousel-cell">
                     <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme7">
                 </div>
                 <div class="carousel-cell">
-                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme8">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme8">
                 </div>
                 <div class="carousel-cell">
                     <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme9">
                 </div>
                 <div class="carousel-cell">
-                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme10">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme10">
                 </div>
                 <div class="carousel-cell">
                     <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme11">
@@ -72,5 +72,206 @@
                 </div>
             </div> -->
     </carousel>
-</div>
-  
+    <div class="names-list">Sugestões para você</div>
+    <carousel class="carousel" style="height: 200px" [cellsToShow]="6" [cellsToScroll]="5" [width]="1800" [borderRadius]="1">
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme1">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme2">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme3">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme4">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme5">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme6">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme7">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme8">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme9">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme10">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme11">
+                </div>
+           
+<!--                
+            <div _ngcontent-wbk-c23="" class="carousel-arrows">
+                <div _ngcontent-wbk-c23="" class="carousel-arrow carousel-arrow-prev">
+                </div>
+                <div _ngcontent-wbk-c23="" class="carousel-arrow carousel-arrow-next">
+                </div>
+            </div> -->
+    </carousel>
+    <div class="names-list">Em alta</div>
+    <carousel class="carousel" style="height: 200px" [cellsToShow]="6" [cellsToScroll]="5" [width]="1800" [borderRadius]="1">
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme1">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme2">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme3">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme4">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme5">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme6">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme7">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme8">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme9">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme10">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme11">
+                </div>
+           
+<!--                
+            <div _ngcontent-wbk-c23="" class="carousel-arrows">
+                <div _ngcontent-wbk-c23="" class="carousel-arrow carousel-arrow-prev">
+                </div>
+                <div _ngcontent-wbk-c23="" class="carousel-arrow carousel-arrow-next">
+                </div>
+            </div> -->
+    </carousel>
+    <div class="names-list">Filmes e séries asiáticos</div>
+    <carousel class="carousel" style="height: 200px" [cellsToShow]="6" [cellsToScroll]="5" [width]="1800" [borderRadius]="1">
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme1">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme2">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme3">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme4">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme5">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme6">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme7">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme8">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme9">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme10">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme11">
+                </div>
+           
+<!--                
+            <div _ngcontent-wbk-c23="" class="carousel-arrows">
+                <div _ngcontent-wbk-c23="" class="carousel-arrow carousel-arrow-prev">
+                </div>
+                <div _ngcontent-wbk-c23="" class="carousel-arrow carousel-arrow-next">
+                </div>
+            </div> -->
+    </carousel>
+    <div class="names-list">Continuar assistindo</div>
+    <carousel class="carousel" style="height: 200px" [cellsToShow]="6" [cellsToScroll]="5" [width]="1800" [borderRadius]="1">
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme1">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme2">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme3">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme4">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme5">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme6">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme7">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme8">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme9">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme10">
+                </div>
+                <div class="carousel-cell">
+                    <img class="img-carousel" src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme11">
+                </div>
+    </carousel>
+    <div class="names-list">Só os melhores</div>
+    <carousel class="carousel" style="height: 400px" [cellsToShow]="6" [cellsToScroll]="5" [width]="1800" [borderRadius]="1">
+                <div class="carousel-cell">
+                    <img src="https://via.placeholder.com/300x600/FA8072/B0C4DE/?text=Filme1">
+                </div>
+                <div class="carousel-cell">
+                    <img src="https://via.placeholder.com/300x600/ffffff/B0C4DE/?text=Filme2">
+                </div>
+                <div class="carousel-cell">
+                    <img src="https://via.placeholder.com/300x600/FA8072/B0C4DE/?text=Filme1">
+                </div>
+                <div class="carousel-cell">
+                    <img src="https://via.placeholder.com/300x600/ffffff/B0C4DE/?text=Filme2">
+                </div>
+                <div class="carousel-cell">
+                    <img src="https://via.placeholder.com/300x600/FA8072/B0C4DE/?text=Filme1">
+                </div>
+                <div class="carousel-cell">
+                    <img src="https://via.placeholder.com/300x600/ffffff/B0C4DE/?text=Filme2">
+                </div>
+                <div class="carousel-cell">
+                    <img src="https://via.placeholder.com/300x600/FA8072/B0C4DE/?text=Filme1">
+                </div>
+                <div class="carousel-cell">
+                    <img src="https://via.placeholder.com/300x600/ffffff/B0C4DE/?text=Filme2">
+                </div>
+                <div class="carousel-cell">
+                    <img src="https://via.placeholder.com/300x600/FA8072/B0C4DE/?text=Filme1">
+                </div>
+                <div class="carousel-cell">
+                    <img src="https://via.placeholder.com/300x600/ffffff/B0C4DE/?text=Filme2">
+                </div>
+    </carousel>
+   
+   
