--- a/src/app/components/series/series.component.scss
+++ b/src/app/components/series/series.component.scss
@@ -253,6 +253,14 @@ div .img-carousel {
     /* object-fit: contain;*/
 }
 
+ div .carousel-cell img {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    object-fit: none !important;
+}
+
+
 .carousel {
     left: 60px !important;
     background-color: #141414 !important;
