Inclusão do carrosel na página latest

--- a/src/app/components/series/series.component.html
+++ b/src/app/components/series/series.component.html
@@ -27,6 +27,9 @@
         <div class="button-series-dark">
             <a href="#"><i class="fa fa-info-circle"></i>Mais informações</a>
         </div>
+   
+ 
+    
     </div>
     <div class="names-list">Minha lista</div>
     <carousel class="carousel" style="height: 200px" [cellsToShow]="6" [cellsToScroll]="5" [width]="1800" [borderRadius]="1">
@@ -273,5 +276,7 @@
                     <img src="https://via.placeholder.com/300x600/ffffff/B0C4DE/?text=Filme2">
                 </div>
     </carousel>
+</div>
+    
    
    
