--- a/src/app/components/template/footer/footer.component.scss
+++ b/src/app/components/template/footer/footer.component.scss
@@ -3,6 +3,7 @@
     background-color: #141414;
     flex-direction: column;
     width: 100%;
+    padding-top: 20px;
     
    
     // padding-left: 160px; 
