--- a/src/app/components/template/header/header.component.scss
+++ b/src/app/components/template/header/header.component.scss
@@ -9,6 +9,8 @@
     &.fundo {
         background-color: #141414;
         background-color: rgb(20, 20, 20);
+        z-index: 1;
+        position: fixed;
     }
 }
 
