--- a/src/app/components/film/film.component.scss
+++ b/src/app/components/film/film.component.scss
@@ -12,7 +12,9 @@
 .hidden {
     display: none;
 }
-
+.posts {
+    background-color: #141414 !important;
+}
 .text-film{
     position: absolute;
     top: 100px;
@@ -223,4 +225,41 @@ span {
     opacity: 0.5;
     position: relative;
     top: 12rem;
+}
+
+
+
+div .img-carousel {
+    border-radius: 10px !important;
+    width: 300px !important;
+    height: 200px !important;
+    // margin-top: 20px !important;
+    // width: 100%;
+    // height: 100%;
+    /* position: relative; */
+    /* object-fit: contain;*/
+}
+
+ div .carousel-cell img {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    object-fit: none !important;
+}
+
+
+.carousel {
+    left: 60px !important;
+    background-color: #141414 !important;
+}
+
+.names-list {
+    font-size: 1.4vw;
+    color: #e5e5e5;
+    font-weight: 700;
+    margin: 0 4% .5em 4%;
+    text-decoration: none;
+    display: inline-block;
+    min-width: 6em;
+    background-color: #141414;
 }
