--- a/src/app/components/series/series.component.scss
+++ b/src/app/components/series/series.component.scss
@@ -11,7 +11,7 @@
     &.show {
         opacity: 1;
         visibility: visible;
-        z-index: 1;
+        // z-index: 1;
     }
 }
 
@@ -25,7 +25,7 @@
     left: 60px;
     &.fundoSerie {
         background-color: #141414;
-        z-index: 1;
+        // z-index: 1;
         position:fixed;
         // top:0;
         top: -68px;
