Ajustes na tela de navegação

--- a/src/app/components/navigation-tab/navigation-tab.component.html
+++ b/src/app/components/navigation-tab/navigation-tab.component.html
@@ -4,34 +4,34 @@
     </div>    
    <div class="card-list">
         <div class="card-item">
-            <img src="assets/img/humano.jpg">
+            <img src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme1">
         </div>
         <div class="card-item"> 
-            <img src="assets/img/naruto.webp">
+            <img src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme1">
         </div>
         <div class="card-item">
-            <img src="assets/img/bill.jpg">
+            <img src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme1">
         </div>
         <div class="card-item">
-            <img src="assets/img/jobs.webp">
+            <img src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme1">
         </div>
         <div class="card-item">
-            <img src="assets/img/promised.webp">
+            <img src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme1">
         </div>
         <div class="card-item">
-            <img src="assets/img/mama.jpg">
+            <img src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme1">
         </div>
         <div class="card-item">
-            <img src="assets/img/bill.jpg">
+            <img src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme1">
         </div>
         <div class="card-item">
-            <img src="assets/img/jobs.webp">
+            <img src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme1">
         </div>
         <div class="card-item">
-            <img src="assets/img/promised.webp">
+            <img src="https://via.placeholder.com/341x192/ffffff/B0C4DE/?text=Filme1">
         </div>
         <div class="card-item">
-            <img src="assets/img/mama.jpg">
+            <img src="https://via.placeholder.com/341x192/FA8072/B0C4DE/?text=Filme1">
         </div>
    </div>
 </div>
