--- a/src/app/components/series/series.component.scss
+++ b/src/app/components/series/series.component.scss
@@ -20,6 +20,8 @@
 }
 
 .text-serie{
+    width: 700px;
+    height: 800px;
     position: absolute;
     top: 100px;
     left: 60px;
@@ -177,14 +179,13 @@ span {
     top: 34rem !important;
  
     a {
-     color: black;
-     text-decoration: none;
-     font-weight: 600;
-     font-size: 24px;
-      
-    position: relative;
-    top: 6px;
-    left: 20px;
+        color: black;
+        text-decoration: none;
+        font-weight: 600;
+        font-size: 24px;
+        position: relative;
+        top: 6px;
+        left: 20px;
     }
 }
 
@@ -276,3 +277,33 @@ div .img-carousel {
     min-width: 6em;
     background-color: #141414;
 }
+
+// @media (max-width: 1830px) {
+//     .button-series-dark {
+//         margin-top:7px;
+//     }
+// }
+// @media (max-width:1675px) {
+//     .button-series-dark {
+//         margin-top:15px;
+//     }
+// }
+// @media (max-width:1290px) {
+//     .button-series-white {
+//         top: 30.2rem !important;
+//     }
+// }
+// @media (max-width:1122px) {
+//     .text-serie img {
+//         top: 0 px;
+//     }
+//     .text-img {
+//         top: 11px;
+//     }
+//     .button-series-white {
+//         top: 23.2rem !important;
+//     }
+//     .button-series-dark {
+//         top: 1.2rem !important;
+//     }
+// }
